@@ -1,5 +1,7 @@
 *SVN*
 
+* Increase mail delivery test coverage.  #8692 [kamal]
+
 * Register alternative template engines using ActionMailer::Base.register_template_extension('haml').  #7534 [cwd, Josh Peek]
 
 * Only load ActionController::UrlWriter if ActionController is present [Rick Olson]
